# dataflowr-tools

./: .gitignore  README.md  pyproject.toml
.claude/: settings.json
src/dataflowr/: __init__.py  api.py  catalog.py  cli.py  content.py  mcp_server.py  models.py
tests/: test_api.py  test_catalog.py  test_cli.py  test_content.py
