[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dataflowr"
version = "0.1.0"
description = "CLI, REST API, and MCP server for the Deep Learning DIY course (dataflowr.github.io)"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Marc Lelarge", email = "marc.lelarge@inria.fr" },
]
keywords = ["deep learning", "education", "pytorch", "course"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]
mcp = [
    "mcp>=1.0",
]
all = [
    "dataflowr[api,mcp]",
]

[project.scripts]
dataflowr = "dataflowr.cli:main"

[project.urls]
Homepage = "https://dataflowr.github.io/website"
Repository = "https://github.com/dataflowr/dataflowr-tools"
Documentation = "https://dataflowr.github.io/website"

[tool.hatch.build.targets.wheel]
packages = ["src/dataflowr"]

[tool.hatch.build.targets.sdist]
include = ["src/", "README.md", "LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[dependency-groups]
dev = [
    "fastapi>=0.134.0",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "uvicorn>=0.41.0",
]
